--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "its vaibhav personal portfolio website.",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "compile:scss": "node-sass sass/main.scss css/style.css -w",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.css -o css/style.css",
     "compress:css": "node-sass css/style.css css/style.css --output-style compressed",
-    "build": "npm-run-all prefix:css compress:css"
-    // "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm-run-all prefix:css compress:css",
+    "start": "npm run lite ",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lite": "lite-server"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,7 @@
   "homepage": "https://github.com/vaivk4/portfolio#readme",
   "dependencies": {
     "autoprefixer": "^10.3.4",
+    "lite-server": "^2.6.1",
     "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^8.3.1"
